# dicer

./: .clang-tidy  .cmake-format  .cspell.json  .gitignore  CMakeLists.txt  LICENSE  README.md  Taskfile.yml
.cspell-dicts/: words.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  devcontianer.yml
include/dicer/: dicer.hpp  encoding.hpp
include/dicer/encoding/: encoding.hpp  varint.hpp  zig_zag.hpp
src/: encoding.cpp
src/encoding/: varint.cpp  zig_zag.cpp
test/: encoding.cpp
test/encoding/: varint.cpp  zig_zag.cpp
